[+] Fix scroll on mobile

--- a/src/styles/App.module.css
+++ b/src/styles/App.module.css
@@ -56,6 +56,7 @@
 
   .container {
     flex-wrap: wrap;
+    overflow: scroll;
   }
 }
 
